Update docker image

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ LE_EMAIL=hello-world@example.com
 
 VAULTWARDEN_HOST=vaultwarden.example.com
 LINKS_HOST=links.example.com
+BLOG_HOST=blog.example.com
